Metadata/unpackaged/objects/Google_Alert_to_Chatter_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Email_Services_Address__c</fullName>
        <label>Email Services Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Stories_Per_Alert__c</fullName>
        <label>Maximum Stories Per Alert</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>News_Source_Blacklist__c</fullName>
        <label>News Source Blacklist</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Google Alert to Chatter Settings</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Google Alert to Chatter Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Google Alert to Chatter Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>